Split dashboard into separate location and route components

--- a/WeatherToRide/templates/locations.html
+++ b/WeatherToRide/templates/locations.html
@@ -14,18 +14,13 @@
 
         <br><br>
 
-        <div>
-            <img src="{{ url_for('static', filename='icons/weather/clear-day.png') }}">
-        </div>
+        <img src="{{ url_for('static', filename='icons/weather/clear-day.png') }}">
 
-        <br><br><br>
+        <br><br>
+        <br><br>
 
-        <div class="btn-group">
-            <a href="{{ url_for('create_location_view') }}" 
-                class="btn btn-success btn-lg" role="button">+ Location</a>
-            <a href="{{ url_for('create_route_view') }}" 
-                class="btn btn-primary btn-lg" role="button">+ Route</a>
-        </div>
+        <a href="{{ url_for('create_location_view') }}" 
+            class="btn btn-primary btn-lg" role="button">+ Location</a>
 
     </div>
 
@@ -37,7 +32,7 @@
         {% for location in locations %}
             <div class="card">
                 <div class="card-header" data-toggle="collapse" data-target="#location_{{ location.id }}">
-                    <h2>{{ location.name }}</h2>
+                    <h3>{{ location.name }}</h3>
                 </div>
                 <div id="location_{{ location.id }}" class="collapse {{ 'show' if loop.first }}" data-parent="#dashboard_accordion">
                     <div class="card-body">
@@ -103,41 +98,11 @@
                         {% else %}
                             <p>The weather for this location could not be loaded.</p>
                         {% endif %}
-
                         <br>
-
                         <form action="{{ url_for('delete_location_view', id=location.id) }}" method="POST">
                             {{ form.csrf_token }}
                             <div class="btn-group">
                                 <a href="{{ url_for('update_location_view', id=location.id) }}" 
-                                    class="btn btn-primary" role="button">Update</a>
-                                {{ form.submit(class_="btn btn-danger", value="Remove") }}
-                            </div>
-                        </form>
-
-                    </div>
-
-                </div>
-            </div>
-        {% endfor %}
-
-        {% for route in routes %}
-            <div class="card">
-                <div class="card-header" data-toggle="collapse" data-target="#route_{{ route.id }}">
-                    <h2>{{ route.name }}</h2>
-                </div>
-                <div id="route_{{ route.id }}" class="collapse" data-parent="#dashboard_accordion">
-                    <div class="card-body">
-                        <p class="lead">
-                            {{ route.location_1.name }} to {{ route.location_2.name }}
-                        </p>
-                        <p class="lead">
-                            {{ route.days|join(', ') }}
-                        </p>
-                        <form action="{{ url_for('delete_route_view', id=route.id) }}" method="POST">
-                            {{ form.csrf_token }}
-                            <div class="btn-group">
-                                <a href="{{ url_for('update_route_view', id=route.id) }}" 
                                     class="btn btn-primary" role="button">Update</a>
                                 {{ form.submit(class_="btn btn-danger", value="Remove") }}
                             </div>
