--- a/WeatherToRide/templates/includes/_navbar.html
+++ b/WeatherToRide/templates/includes/_navbar.html
@@ -11,10 +11,10 @@
       <ul class="navbar-nav mr-auto">
         {% if user['is_authenticated'] %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('location_dashboard') }}">Locations</a>
+                <a class="nav-link" href="{{ url_for('location_view') }}">Locations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('route_dashboard') }}">Routes</a>
+                <a class="nav-link" href="{{ url_for('route_view') }}">Routes</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
