--- a/WeatherToRide/templates/locations.html
+++ b/WeatherToRide/templates/locations.html
@@ -19,7 +19,7 @@
         <br><br>
         <br><br>
 
-        <a href="{{ url_for('create_location_view') }}" 
+        <a href="{{ url_for('location_create_view') }}" 
             class="btn btn-primary btn-lg" role="button">+ Location</a>
 
     </div>
@@ -99,10 +99,10 @@
                             <p>The weather for this location could not be loaded.</p>
                         {% endif %}
                         <br>
-                        <form action="{{ url_for('delete_location_view', id=location.id) }}" method="POST">
+                        <form action="{{ url_for('location_delete_view', id=location.id) }}" method="POST">
                             {{ form.csrf_token }}
                             <div class="btn-group">
-                                <a href="{{ url_for('update_location_view', id=location.id) }}" 
+                                <a href="{{ url_for('location_update_view', id=location.id) }}" 
                                     class="btn btn-primary" role="button">Update</a>
                                 {{ form.submit(class_="btn btn-danger", value="Remove") }}
                             </div>
