--- a/WeatherToRide/templates/forgot.html
+++ b/WeatherToRide/templates/forgot.html
@@ -2,12 +2,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Register
+    Forgot Password
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Register</h1><br>
+    <br><h1>Forgot Password</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -17,22 +17,6 @@
 
         <div class="form-group">
             {{ render_field( form.email, class_="form-control" )}}
-        </div>
-
-        <div class="form-group">
-            {{ render_field( form.password, class_="form-control" )}}
-        </div>
-
-        <div class="form-group">
-            {{ render_field( form.confirm, class_="form-control" )}}
-        </div>
-
-        <div class="form-group">
-            {{ render_field( form.name, class_="form-control" )}}
-        </div>
-
-        <div class="form-group">
-            {{ render_field( form.phone, class_="form-control" )}}
         </div>
 
         <div class="form-group">
