--- a/WeatherToRide/templates/includes/_navbar.html
+++ b/WeatherToRide/templates/includes/_navbar.html
@@ -17,6 +17,12 @@
                 <a class="nav-link" href="{{ url_for('route_view') }}">Routes</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#">Developer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('user_update_view') }}">My Account</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
         {% else %}
