--- a/WeatherToRide/templates/reset-password.html
+++ b/WeatherToRide/templates/reset-password.html
@@ -2,12 +2,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Login
+    Reset Password
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Login</h1><br>
+    <br><h1>Reset Password</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -16,11 +16,11 @@
         {{ form.csrf_token }}
 
         <div class="form-group">
-            {{ render_field( form.email, class_="form-control" )}}
+            {{ render_field( form.password, class_="form-control" )}}
         </div>
 
         <div class="form-group">
-            {{ render_field( form.password, class_="form-control" )}}
+            {{ render_field( form.confirm, class_="form-control" )}}
         </div>
 
         <div class="form-group">
@@ -29,10 +29,7 @@
 
         <br>
 
-        <div class="btn-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <a href="{{ url_for('forgot_password') }}" class="btn btn-danger">Forgot Password</a>
-        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
 
     </form>
 
