--- a/WeatherToRide/templates/user-form.html
+++ b/WeatherToRide/templates/user-form.html
@@ -2,12 +2,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Login
+    User Form
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>Login</h1><br>
+    <br><h1>User Form</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
@@ -24,15 +24,24 @@
         </div>
 
         <div class="form-group">
+            {{ render_field( form.confirm, class_="form-control" )}}
+        </div>
+
+        <div class="form-group">
+            {{ render_field( form.name, class_="form-control" )}}
+        </div>
+
+        <div class="form-group">
+            {{ render_field( form.phone, class_="form-control" )}}
+        </div>
+
+        <div class="form-group">
             {{ render_field( form.recaptcha, class_="form-control" )}}
         </div>
 
         <br>
 
-        <div class="btn-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <a href="{{ url_for('forgot_password') }}" class="btn btn-danger">Forgot Password</a>
-        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
 
     </form>
 
