Added option to delete account

--- a/WeatherToRide/templates/index.html
+++ b/WeatherToRide/templates/index.html
@@ -8,10 +8,13 @@
 {% block body %}
 
     <div class="jumbotron text-center">
-        <h1>Homepage</h1>
+        <h1>WeatherToRide</h1>
+        <br><br>
+        <img src="{{ url_for('static', filename='icons/weather/clear-day.png') }}">
+        <br><br>
         <br><br>
         <p class="lead">
-            This application is built with Python using the Flask web framework.
+            Tired of having to reschedule travel plans because of bad weather?
         </p>
     </div>
 
