--- a/WeatherToRide/templates/includes/_form_helpers.html
+++ b/WeatherToRide/templates/includes/_form_helpers.html
@@ -4,7 +4,7 @@
   {{ field(**kwargs)|safe }}
   {% if field.errors %}
     {% for error in field.errors %}
-      <span class="help-inline" style="color:red;">{{ error }}</span>
+      <div class="alert alert-{{ category }}" style="color:red;">{{ error }}</div>
     {% endfor %}
   {% endif %}
 {% endmacro %}
