--- a/WeatherToRide/templates/includes/_navbar.html
+++ b/WeatherToRide/templates/includes/_navbar.html
@@ -23,6 +23,9 @@
                 <a class="nav-link" href="{{ url_for('user_update_view') }}">My Account</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('delete_user') }}">Delete Account</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
         {% else %}
