--- a/WeatherToRide/templates/route-form.html
+++ b/WeatherToRide/templates/route-form.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            {{ render_field( form.days )}}
+            {{ form.days }}
         </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
