User form update

--- a/WeatherToRide/templates/user-form.html
+++ b/WeatherToRide/templates/user-form.html
@@ -2,12 +2,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Create your account
+    Registration
 {% endblock %}
 
 {% block body %}
 
-    <br><h1>User Form</h1><br>
+    <br><h1>Create your account</h1><br>
 
     {% from "includes/_form_helpers.html" import render_field %}
 
