--- a/WeatherToRide/static/css/styles.css
+++ b/WeatherToRide/static/css/styles.css
@@ -1,21 +1,9 @@
 
-/* Bootstrap overrides */
-.card {
-    text-align: center;
-}
-
-.card-header {
-    cursor: pointer;
-}
-
-.accordion {
-    margin-bottom: 20px;
-}
-
 ul {
     padding-left: 0px;
 }
 
+/* Use dark icons for the carousel instead of the default, lighter ones */
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
 }
