Improved navbar layout

--- a/WeatherToRide/templates/base.html
+++ b/WeatherToRide/templates/base.html
@@ -14,6 +14,10 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
         crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
+        crossorigin="anonymous">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.png') }}">
@@ -27,7 +31,6 @@
     <div class="container">
         {% include 'includes/_messages.html' %}
         {% include 'includes/_navbar.html' %}
-        <br>
         {% block body %}{% endblock %}
     </div>
 
