--- a/WeatherToRide/templates/includes/_navbar.html
+++ b/WeatherToRide/templates/includes/_navbar.html
@@ -1,4 +1,6 @@
 
+<!-- Adapted from https://getbootstrap.com/docs/4.0/components/navbar/ -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <a class="navbar-brand" href="{{ url_for('index') }}">WeatherToRide</a>
