Single recommendation for routes

--- a/WeatherToRide/templates/location/locations.html
+++ b/WeatherToRide/templates/location/locations.html
@@ -33,49 +33,49 @@
                 <div id="location_carousel_{{ location.id }}" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <h6>Today</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">Today</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_0_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_0_summary }}</p>
                             <p class="lead">{{ location.forecast.day_0_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>Tomorrow</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">Tomorrow</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_1_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_1_summary }}</p>
                             <p class="lead">{{ location.forecast.day_1_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>{{ day_2 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ day_2 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_2_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_2_summary }}</p>
                             <p class="lead">{{ location.forecast.day_2_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>{{ day_3 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ day_3 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_3_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_3_summary }}</p>
                             <p class="lead">{{ location.forecast.day_3_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>{{ day_4 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ day_4 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_4_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_4_summary }}</p>
                             <p class="lead">{{ location.forecast.day_4_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>{{ day_5 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ day_5 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_5_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_5_summary }}</p>
                             <p class="lead">{{ location.forecast.day_5_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>{{ day_6 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ day_6 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_6_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_6_summary }}</p>
                             <p class="lead">{{ location.forecast.day_6_recommendation }}</p>
                         </div>
                         <div class="carousel-item">
-                            <h6>Next {{ day_7 }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">Next {{ day_7 }}</h5>
                             <br><img src="/static/icons/weather/{{ location.forecast.day_7_icon }}.png"><br><br>
                             <p class="lead">{{ location.forecast.day_7_summary }}</p>
                             <p class="lead">{{ location.forecast.day_7_recommendation }}</p>
