--- a/WeatherToRide/templates/route/routes.html
+++ b/WeatherToRide/templates/route/routes.html
@@ -35,22 +35,22 @@
                 <div class="carousel-inner">
                     {% for f in route.forecast %}
                         <div class="carousel-item {{ 'active' if loop.first }}">
-                            <h5>{{ f.day }}</h6>
+                            <h5 style="font-weight: bold; margin-bottom: 20px;">{{ f.day }}</h5>
 
                             <div class="row">
                                 <div class="col-md-6" style="border-right: 1px dashed #ccc">
                                     <h6>{{ route.location_1_name }}</h6>
                                     <br><img src="/static/icons/weather/{{ f.location_1.icon }}.png"><br><br>
                                     <p class="lead">{{ f.location_1.summary }}</p>
-                                    <p class="lead">{{ f.location_1.recommendation }}</p>
                                 </div>
                                 <div class="col-md-6" style="border-left: 1px dashed #ccc">
                                     <h6>{{ route.location_2_name }}</h6>
                                     <br><img src="/static/icons/weather/{{ f.location_2.icon }}.png"><br><br>
                                     <p class="lead">{{ f.location_2.summary }}</p>
-                                    <p class="lead">{{ f.location_2.recommendation }}</p>
                                 </div>                                
                             </div>
+
+                            <h5 style="margin-top: 20px;">{{ f.recommendation }}</h5>
                         </div>
                     {% endfor %}
                 </div>
